# ohtu-palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: .coveragerc
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: LICENSE  README.md  erotus.py  index.py  logger.py  summa.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/hello-robot/src/tests/: reset_counter.robot
viikko3/login/: log.html  output.xml  report.html
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/: index.py  tuote.py
viikko5/important/: important.txt  vip.txt
viikko6/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: README_web.md  pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: kps_tekoaly.py
viikko7/kivi-paperi-sakset/src/: index.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  peli_tehdas.py  tuomari.py  web.py
viikko7/kivi-paperi-sakset/src/static/: style.css
viikko7/kivi-paperi-sakset/src/templates/: kps.py
viikko7/kivi-paperi-sakset/src/web_templates/: index.html
viikko7/kivi-paperi-sakset/tests/: test_web.py
(+7 files in other folders)
