[project]
name = "poetry-web"
version = "0.1.0"
description = "ohtu viikko2"
authors = [
    {name = "vekkul1",email = "veeti.hallaaho@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "sqlalchemy (==1.4.54)"
]

[dependency-groups]
dev = [
    "coverage (>=7.11.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
