[project]
name = "kivi-paperi-sakset"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Luukkainen",email = "mluukkai@iki.fi"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6"
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
requests = "^2.28"
httpx = "^0.24"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
